INTARCH-2012: Fix text clipping in thumbnails
Former-commit-id: 1e5ac907f4da149dc40d970d99fe2c02bc46ab74

--- a/app/javascript/stylesheets/components/_detail-list.scss
+++ b/app/javascript/stylesheets/components/_detail-list.scss
@@ -24,6 +24,6 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;  /* 1 */
   display: -webkit-box;
-  max-height: $line-height-medium * 3;  /* 2 */
+  max-height: $base-unit * 3;  /* 2 */
   overflow: hidden;
 }
